fix: hide "x" button on input filters when filters are not actively visible

--- a/src/components/ChataTable/ChataTable.scss
+++ b/src/components/ChataTable/ChataTable.scss
@@ -137,11 +137,14 @@
       height: 35px;
     }
 
-    .tabulator-header-filter input {
-      opacity: 0;
-      visibility: hidden;
-      pointer-events: none;
-      line-height: 14px;
+    .tabulator-header-filter {
+      input,
+      .react-autoql-input-clear-btn {
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+        line-height: 14px;
+      }
     }
 
     .react-autoql-tabulator-container .tabulator-tableholder {
